# graphics

./: .gitignore  CMakeLists.txt  GNUmakefile  LICENSE  README.md  toolchain-cygwin-mingw64.cmake
3dmath/: CMakeLists.txt
3dmath/include/: libcheck_wrapper.h  matrix.h  scalar.h  vector.h
3dmath/src/: matrix.c  scalar.c  vector.c
3dmath/tests/: check_matrix.c  check_vector.c
glsys/: CMakeLists.txt
glsys/include/: glsys.h
glsys/src/: glsys.c
gltut/: CMakeLists.txt
gltut/framework/: framework.c  framework.h
gltut/tut_01_hello_triangle/: CMakeLists.txt  tut1.c  tut1.html  tut1.js  tut1_exercises.c
gltut/tut_02_playing_with_colors/: CMakeLists.txt  frag_position.c  frag_position.frag  frag_position.html  frag_position.js  frag_position.vert  tut2_exercises.c  tut2_exercises.frag  tut2_exercises.vert  vertex_colors.c  vertex_colors.frag  vertex_colors.html  vertex_colors.js  vertex_colors.vert
gltut/tut_03_opengls_moving_triangle/: CMakeLists.txt  calc_color.frag  calc_offset.vert  cpu_position_offset.c  frag_change_color.c  frag_change_color.html  frag_change_color.js  position_offset.vert  standard.frag  standard.vert  vert_calc_offset.c  vert_calc_offset.html  vert_calc_offset.js  vert_position_offset.c
gltut/tut_04_objects_at_rest/: CMakeLists.txt  aspect_ratio.c  manual_perspective.vert  matrix_perspective.c  matrix_perspective.vert  ortho_cube.c  ortho_with_offset.vert  shader_perspective.c  standard_colors.frag
gltut/tut_05_objects_in_depth/: CMakeLists.txt  depth_buffer.c  overlap_no_depth.c  standard.frag  standard.vert
gltut/tut_06_objects_in_motion/: CMakeLists.txt  color_passthrough.frag  pos_color_local_transform.vert  rotations.c  rotations.html  rotations.js  scale.c  translation.c
graphics_math/: CMakeLists.txt  GNUmakefile
graphics_math/include/: matrix.h  scalar.h  vector.h
graphics_math/src/: matrix.c  vector.c
graphics_math/tests/: check_matrix.c  check_vector.c
khronos_registry/: generator.py  write_glsys_example.sh
math/: CMakeLists.txt  GNUmakefile
math/include/: scalar.h
math/src/: matrix.c
math/tests/: check_matrix.c  check_vector.c
opengl_4.0_shading_language_cookbook/: GNUmakefile
opengl_4.0_shading_language_cookbook/008-using_glew/: TestGlew.cpp
opengl_4.0_shading_language_cookbook/010-using_glm/: TestGlm.cpp
opengl_4.0_shading_language_cookbook/013-determining_version/: DetermineVersion.cpp
opengl_4.0_shading_language_cookbook/015-compiling_a_shader/: CompilingAShader.cpp
opengl_4.0_shading_language_cookbook/018-linking_a_shader/: LinkingAShader.cpp
opengl_4.0_shading_language_cookbook/022-sending_data/: SendingData.cpp  basic.vert
opengl_4.0_shading_language_cookbook/029-active_attributes/: basic.frag  basic.vert
opengl_4.0_shading_language_cookbook/test/: HelloWorld  HelloWorld.cpp
opengl_4_shading_language_cookbook/: GNUmakefile  add_mingw_path.sh
opengl_4_shading_language_cookbook/008-using_glew/: TestGlew.cpp
opengl_4_shading_language_cookbook/010-using_function_loader/: TestFunctionLoader.cpp
opengl_4_shading_language_cookbook/013-determining_version/: DetermineVersion.cpp
opengl_4_shading_language_cookbook/013-using_glm/: TestGlm.cpp
opengl_4_shading_language_cookbook/015-compiling_a_shader/: CompilingAShader.cpp
opengl_4_shading_language_cookbook/015-determining_version/: DetermineVersion.cpp
opengl_4_shading_language_cookbook/018-linking_a_shader/: FileUtil.cpp  LinkingAShader.cpp  basic.frag
opengl_4_shading_language_cookbook/021-linking_a_shader/: LinkingAShader.cpp  basic.vert
opengl_4_shading_language_cookbook/022-sending_data/: SendingData.cpp  basic.frag
opengl_4_shading_language_cookbook/025-sending_data/: SendingData.cpp  basic.frag  basic.vert
opengl_4_shading_language_cookbook/029-active_attributes/: ListActiveAttributes.cpp
opengl_4_shading_language_cookbook/034-active_attributes/: ListActiveAttributes.cpp
opengl_4_shading_language_cookbook/037-using_uniforms/: FileUtil.h  UsingUniforms.cpp  basic.frag  basic.vert
opengl_4_shading_language_cookbook/041-active_uniforms/: ListActiveUniforms.cpp  basic.vert
opengl_4_shading_language_cookbook/043-uniform_blocks/: UniformBlocks.cpp  circle.frag  circle.vert
opengl_4_shading_language_cookbook/049-debug_messages/: README.txt
opengl_4_shading_language_cookbook/common/: ArrayCount.h  ShaderProgram.cpp  ShaderProgram.h
opengl_4_shading_language_cookbook/glsys/: glsys_functions.txt  update.sh
opengl_4_shading_language_cookbook/glsys/include/: glsys.h
opengl_4_shading_language_cookbook/glsys/src/: glsys.c
opengl_4_shading_language_cookbook/test/: HelloWorld.cpp
opengles2/: CMakeLists.txt  chapter_04.c  chapter_06-buffer_objects.c  chapter_06.c  rotate_triangle.c  rotate_triangle.html  rotate_triangle.js  sdl_gl_info.c  sdl_gl_test.c
opengles2/glsys/opengl/include/: glsys.h
opengles2/glsys/opengl/src/: glsys.c
opengles2/glsys/opengles/include/: glsys.h
opengles2/glsys/opengles/src/: glsys.c
opengles2/shaders/: CMakeLists.txt  chapter_06.frag  chapter_06.glsl.frag  chapter_06.vert  hello_triangle.frag  hello_triangle.glsl.vert  hello_triangle.vert  rotate_triangle.frag  rotate_triangle.vert
webgl/: 01-simple_triangle.html  01-simple_triangle.js  02-colored_triangle.html  02-colored_triangle.js  03-indexed_triangle.html  03-indexed_triangle.js  04-rotating_triangle.html  04-rotating_triangle.js  05-rotating_cube.html  05-rotating_cube.js  06-perspective_cube.html  06-perspective_cube.js  07-lookat_matrix.html  07-lookat_matrix.js
